# damen

./: .gitignore  CMakeLists.txt  README.md  build.bat
.opencode/skills/damen-tight/: SKILL.md
client/: CMakeLists.txt  tight_client.cpp
creek/: blocking_queue.hpp  logger.hpp  tight.hpp  types.hpp
creek/tight/: bandwidth.hpp  fec.hpp  packet_codec.hpp
docs/: README.md  api_reference.md  architecture.md  usage_guide.md
docs/records/: 2026-07-20-tight-reliability-memory-av.md
gateway/: audio_listener.hpp  device_listener.hpp  forward_listener.hpp  gateway_auth.hpp  gateway_blackboard.hpp  gateway_channel.hpp  gateway_config.hpp  gateway_context.hpp  gateway_main.cpp  gateway_metrics.hpp  gateway_metrics_http.hpp  gateway_ratelimit.hpp  gateway_reactor.hpp  gateway_server.hpp  gateway_session.hpp  gateway_types.hpp  hello_listener.hpp
tests/: sim_device.hpp  test_auth.cpp  test_blackboard.cpp  test_channel.cpp  test_command.cpp  test_crypto.cpp  test_e2e.cpp  test_e2e_dbg.cpp  test_e2e_final.cpp  test_e2e_sim.cpp  test_e2e_simple.cpp  test_e2e_v2.cpp  test_framework.hpp  test_mem8k.cpp  test_mem8k_split.cpp  test_minimal.cpp  test_ratelimit.cpp  test_server.cpp  test_session.cpp  test_tight_fec.cpp  test_tight_pair.cpp  test_udp.cpp
tight/: CMakeLists.txt  README.md  address.cpp  address.hpp  bandwidth.cpp  command.cpp  command.hpp  crc32.cpp  crc32.hpp  crypto.cpp  crypto.hpp  fec.cpp  fragmenter.cpp  fragmenter.hpp  packet_codec.cpp  peer.hpp  reassembler.cpp  reassembler.hpp  report.cpp  report.hpp  socket_platform.hpp  transport.cpp  wire_format.hpp  wsa.cpp  wsa.hpp
tight/docs/: usage.md
tight/docs/litemode/: 01_requirements.md  02_architecture.md  03_api.md  04_security.md  05_memory_optimization.md  README.md
tight/include/tight/: bandwidth.hpp  blocking_queue.hpp  fec.hpp  logger.hpp  packet_codec.hpp  tight.hpp  types.hpp
tight/src/: address.cpp  address.hpp  bandwidth.cpp  buffer_pool.hpp  command.cpp  command.hpp  crc32.cpp  crc32.hpp  crypto.cpp  crypto.hpp  fec.cpp  fragmenter.cpp  fragmenter.hpp  packet_codec.cpp  peer.hpp  reassembler.cpp  reassembler.hpp  report.cpp  report.hpp  small_thread.hpp  socket_platform.hpp  transport.cpp  wire_format.hpp  wsa.cpp  wsa.hpp
